finxing some stuff

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2 class="ml-2 topBrand text-md-left d-md-block d-none">
             codeup design
         </h2>
-        <a class="nav-link d-none d-md-block ml-auto" href="#">BLOG</a>
+        <a class="nav-link d-none d-md-block ml-auto" href="#">SERVICES</a>
         <a class="nav-link d-none d-md-block" href="#">CONTACT</a>
         <a class="nav-link d-none d-md-block" href="#">BLOG</a>
         <a class="nav-link d-none d-md-block" href="#">CONTACT</a>
@@ -56,34 +56,6 @@
     </ul>
 </nav>
 </div>
-
-<!--MEDIUM NAV-->
-<!--<div class="container.fluid px-0 w-100 .d-none .d-md-block .d-lg-none">-->
-<!--    <nav class="row navbar bg-#E6E6E6 justify-content-center py-1">-->
-<!--        <a class="topLogo mb-3 d-flex col-sm-12 justify-content-center px-0">-->
-<!--            <img class="logo" src="img/logo.png" width="105" height="105">-->
-<!--        </a>-->
-<!--        <h2 class="col-sm-12 text-center topBrand justify-content-md-center">-->
-<!--            codeup design-->
-<!--        </h2>-->
-<!--        <ul class="navbar-nav navbar-expand text-center col-12 justify-content-around">-->
-<!--            <li class="nav-item ">-->
-<!--                <a class="nav-link" href="#">SERVICES</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item ">-->
-<!--                <a class="nav-link" href="#">WORK</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item ">-->
-<!--                <a class="nav-link" href="#">BLOG</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item ">-->
-<!--                <a class="nav-link" href="#">CONTACT</a>-->
-<!--            </li>-->
-
-<!--        </ul>-->
-
-<!--    </nav>-->
-<!--</div>-->
 
 <body id="custom">
 <header>
@@ -206,15 +178,15 @@
                 <div class="card-top">
                     <div class="col" style="width: 100%">
                         <div class="card-1 d-flex">
-                            <img src="img/google-search.jpg" width="50%" alt="google-search">
+                            <img src="img/mobile-phone.jpg" width="30%" alt="google-search">
                             <p class="col-9">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
                         </div>
                         <div class="card-2 d-flex mt-5">
-                            <img src="img/head.jpg" width="50%" alt="3d-head">
+                            <img src="img/head.jpg" width="30%" alt="3d-head">
                             <p class="col-9">NIBBLER AWESOME WEBSITE TESTING</p>
                         </div>
                         <div class="card-3 d-flex mt-5">
-                            <img src="img/ipad.jpg" width="50%" alt="hand holding ipad.">
+                            <img src="img/ipad.jpg" width="30%" alt="hand holding ipad.">
                             <p class="col-9">HOW TO GET GOOGLE TO LIKE YOU</p>
                         </div>
                         <div class="card-4 d-flex mt-5">
